test-cases/negative/test_111_test_without_end.lay
# negative test: test statement without end test
# expected: parser should reject this

test 'my test'
  expect 5 is 5


